--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=trialforspring@gmail.com
-spring.mail.password=ksoncgakbepczqnu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#I have added spring.mail.username and spring.mail.password . But cause of security issues,I deleted this variables
